# py-earth2

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README-original.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  testing.yml
benchmarks/: fast.py  pyearth_vs_earth.py
conda-recipe/: move-conda-package.py  run_test.py
doc/: conf.py  generate_figures.py  xkcdify.py
examples/: plot_classifier_comp.py  plot_derivatives.py  plot_feature_importance.py  plot_linear_function.py  plot_missing_data_problem.py  plot_multicolumn.py  plot_output_weight.py  plot_sine_wave.py  plot_sine_wave_2d.py  plot_v_function.py  return_sympy.py
pyearth/: __init__.py  _basis.pyx  _pruning.pyx  _qr.pyx  _version.py  earth.py  export.py
pyearth/test/: __init__.py  test_earth.py  test_export.py  test_forward.py  test_knot_search.py  test_pruning.py  test_qr.py  test_util.py  testing_utils.py
pyearth/test/basis/: __init__.py  base.py  test_basis.py  test_constant.py  test_hinge.py  test_linear.py  test_missingness.py  test_smoothed_hinge.py
pyearth/test/record/: test_forward_pass.py  test_pruning_pass.py
src/pyearth/: __init__.py  earth.py  export.py
test/: forward_regress.txt  test_earth.py  test_export.py  test_forward.py
test/__snapshots__/: test_forward.ambr
test/basis/: __init__.py  base.py  test_basis.py  test_constant.py  test_linear.py  test_missingness.py
test/record/: test_pruning_pass.py
